# rdkafka-rust

./: .gitmodules  Cargo.toml  LICENSE  README.md
.generated/: rdkafka.h.rs
examples/: sample.rs  simple_producer.rs
librdkafka-sys/: Cargo.toml  build.rs  errors.rs  lib.rs
src/: errors.rs  lib.rs  main.rs
src/client/: config.rs  mod.rs
src/librdkafka/: errors.rs  mod.rs
src/producer/: mod.rs
